content/terraform-plugin-testing/v1.8.x/docs/plugin/testing/acceptance-tests/known-value-checks/number.mdx
---
page_title: 'Plugin Development - Acceptance Testing: Known Values'
description: >-
    Number Value Checks for use with Plan Checks.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2023-01-01T00:00:00.000Z
last_modified: 2023-01-01T00:00:00.000Z
# END AUTO GENERATED METADATA
---

# Number Known Value Checks

The known value checks that are available for number values are:

* [NumberExact](/terraform/plugin/testing/acceptance-tests/known-value-checks/number#numberexact-check)

## `NumberExact` Check

The [NumberExact](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#NumberExact) check tests that a resource attribute, or output value has an exactly matching number value.

Example usage of [NumberExact](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#NumberExact) in an [ExpectKnownValue](/terraform/plugin/testing/acceptance-tests/plan-checks/resource) plan check.

```go
func TestExpectKnownValue_CheckPlan_Number(t *testing.T) {
	t.Parallel()

    num, _, err := big.ParseFloat("1.797693134862315797693134862315797693134862315", 10, 512, big.ToNearestEven)

	if err != nil {
		t.Errorf("%s", err)
	}

	resource.Test(t, resource.TestCase{
		// Provider definition omitted.
		Steps: []resource.TestStep{
			{
        	    // Example resource containing a computed number attribute named "computed_attribute"
				Config: `resource "test_resource" "one" {}`,
				ConfigPlanChecks: resource.ConfigPlanChecks{
					PreApply: []plancheck.PlanCheck{
						plancheck.ExpectKnownValue(
							"test_resource.one",
							tfjsonpath.New("computed_attribute"),
							knownvalue.NumberExact(num),
						),
					},
				},
			},
		},
	})
}
```
