content/terraform-plugin-testing/v1.12.x/docs/plugin/testing/acceptance-tests/known-value-checks/number.mdx
---
page_title: 'Plugin Development - Acceptance Testing: Known Values'
description: >-
    Number Value Checks for use with Plan and State Checks.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-03-19T09:28:23-04:00
last_modified: 2025-03-19T09:28:23-04:00
# END AUTO GENERATED METADATA
---

# Number Known Value Checks

The known value checks that are available for number values are:

* [NumberExact](/terraform/plugin/testing/acceptance-tests/known-value-checks/number#numberexact-check)
* [NumberFunc](/terraform/plugin/testing/acceptance-tests/known-value-checks/number#numberfunc-check)

## `NumberExact` Check

The [NumberExact](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#NumberExact) check tests that a resource attribute, or output value has an exactly matching number value.

Example usage of [NumberExact](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#NumberExact) in an [ExpectKnownValue](/terraform/plugin/testing/acceptance-tests/plan-checks/resource) plan check.

```go
func TestExpectKnownValue_CheckPlan_Number(t *testing.T) {
	t.Parallel()

    num, _, err := big.ParseFloat("1.797693134862315797693134862315797693134862315", 10, 512, big.ToNearestEven)

	if err != nil {
		t.Errorf("%s", err)
	}

	resource.Test(t, resource.TestCase{
		// Provider definition omitted.
		Steps: []resource.TestStep{
			{
        	    // Example resource containing a computed number attribute named "computed_attribute"
				Config: `resource "test_resource" "one" {}`,
				ConfigPlanChecks: resource.ConfigPlanChecks{
					PreApply: []plancheck.PlanCheck{
						plancheck.ExpectKnownValue(
							"test_resource.one",
							tfjsonpath.New("computed_attribute"),
							knownvalue.NumberExact(num),
						),
					},
				},
			},
		},
	})
}
```

## `NumberFunc` Check

The [NumberFunc](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#NumberFunc) check allows defining a custom function to validate whether the number value of a resource attribute or output satisfies specific conditions.

Example usage of [NumberFunc](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#NumberFunc) in an [ExpectKnownValue](/terraform/plugin/testing/acceptance-tests/state-checks/resource) state check.

```go
func TestExpectKnownValue_CheckState_NumberFunc(t *testing.T) {
	t.Parallel()

	resource.Test(t, resource.TestCase{
		// Provider definition omitted.
		Steps: []resource.TestStep{
			{
				// Example resource containing a number attribute named "configurable_attribute"
				Config: `resource "test_resource" "one" {}`,
				ConfigStateChecks: []statecheck.StateCheck{
					statecheck.ExpectKnownValue(
						"test_resource.one",
						tfjsonpath.New("configurable_attribute"),
						knownvalue.NumberFunc(func(v *big.Float) error {
							if err := testConfigurableAttribute(v); err != nil {
								return fmt.Errorf("attribute validation failed: %w", err)
							}
							return nil
						}),
					),
				},
			},
		},
	})
}
```